Modify  frontend/src/components/CarouselNew.jsx, frontend/src/components/Product.jsx,  frontend/src/index.css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,12 +70,15 @@ main {
 .product-information {
   padding: 1rem;
 }
-.desc{
+.product-link {
+  text-decoration: none;
+}
+.desc {
   text-align: justify;
 }
 
 .rating span {
-  color: rgb(244, 84, 25);;
+  color: rgb(244, 84, 25);
 }
 
 .img-large {
